feat(knowledge): DeepResearch guides, JP exam cleanup, and JDK8 fixes
Add wiki-moli DeepResearch/AI ops guides and research menu SQL; remove jp-fe-ap-exam raw/wiki assets with purge script; fix knowledge-server Java 8 compile/tests; add deep-research pytest.ini for imports.