@@ -4,6 +4,7 @@ import com.moli.knowledge.server.dto.retrieval.VectorSearchHit;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -19,7 +20,7 @@ public class KbHybridRrfSupportTest {
         long correctId = 100L;
         long annexId = 200L;
 
-        List<Long> ngramIds = List.of(correctId);
+        List<Long> ngramIds = Collections.singletonList(correctId);
         VectorSearchHit annexHit = new VectorSearchHit();
         annexHit.setChunkId(annexId);
         annexHit.setSlug("articles/bigdata/annex-hadoop-dump");
@@ -29,9 +30,9 @@ public class KbHybridRrfSupportTest {
         correctHit.setSlug("articles/jvm-memory-gc");
         correctHit.setRank(5);
 
-        Map<Long, Double> fused = KbHybridRrfSupport.rrfFuse(
-                ngramIds, List.of(annexHit, correctHit), RRF_K);
-        Map<Long, String> slugs = KbHybridRrfSupport.slugIndexFromVectorHits(List.of(annexHit, correctHit));
+        List<VectorSearchHit> hits = Arrays.asList(annexHit, correctHit);
+        Map<Long, Double> fused = KbHybridRrfSupport.rrfFuse(ngramIds, hits, RRF_K);
+        Map<Long, String> slugs = KbHybridRrfSupport.slugIndexFromVectorHits(hits);
         slugs.put(correctId, "articles/jvm-memory-gc");
 
         Map<Long, Double> penalized = KbHybridRrfSupport.applyAnnexFusionPenalty(fused, slugs);
@@ -49,7 +50,7 @@ public class KbHybridRrfSupportTest {
         v.setSlug("guides/foo");
         v.setRank(2);
 
-        Map<Long, Double> fused = KbHybridRrfSupport.rrfFuse(ngramIds, List.of(v), RRF_K);
+        Map<Long, Double> fused = KbHybridRrfSupport.rrfFuse(ngramIds, Collections.singletonList(v), RRF_K);
         assertEquals(1.0 / (RRF_K + 1), fused.get(1L), 1e-9);
         assertEquals(1.0 / (RRF_K + 2), fused.get(2L), 1e-9);
         assertEquals(1.0 / (RRF_K + 2), fused.get(3L), 1e-9);
